ui jump fixed in large screen

--- a/src/index.css
+++ b/src/index.css
@@ -64,13 +64,13 @@
     @apply border-border;
   }
   body {
-    @apply !mx-auto !max-w-[100rem] bg-background text-foreground;
+    @apply bg-background text-foreground;
   }
 }
 
 @layer utilities {
   .wrapper {
-    @apply w-full max-w-7xl p-5 md:px-10 lg:mx-auto xl:px-0;
+    @apply w-full p-5 md:px-10 xl:px-0;
   }
 
   .flex-center {
